fix: huge messages overflowing the chat container

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,7 +45,7 @@
 }
 
 ::-webkit-scrollbar {
-    @apply w-2;
+    @apply w-1;
 }
 
 ::-webkit-scrollbar-track {
